# demo-05

./: .gitignore  Cargo.toml  DESIGN.md  README.md  rustfmt.toml
.github/workflows/: ci.yaml
audio/: Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  mesh.rs
graphics/: Cargo.toml
proto/: Cargo.toml
proto/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: cli.rs  main.rs
src/: entity.rs  graphics.rs  lib.rs  proto.rs  runtime.rs  system.rs
src/entity/: decoder.rs  default_decoders.rs  material.rs  mesh.rs  parameter.rs  shader.rs
src/graphics/: camera.rs  material.rs  shader.rs
src/runtime/: cli.rs  logic.rs  main.rs
src/system/: resource.rs
synchronizer/: Cargo.toml
system/: Cargo.toml
system/src/: lib.rs  resource.rs
