[workspace]
members = [
  "audio",
  "entity",
  "graphics",
  "proto",
  "runtime",
  "synchronizer",
  "system",
]

[patch.crates-io]
audio = { path = "audio" }
entity = { path = "entity" }
graphics = { path = "graphics" }
proto = { path = "proto" }
runtime = { path = "runtime" }
synchronizer = { path = "synchronizer" }
system = { path = "system" }
