[package]
name = "spectra"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Demoscene is the best."
keywords = []
categories = []
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "runtime"
path = "src/runtime/main.rs"

[features]
default = []
trace-camera = []
trace-system-msg = []
trace-window-events = []

[dependencies]
cgmath = "0.17"
colored = "2"
ctrlc = "3.1"
env_logger = "0.7.1"
glfw = "0.41"
glsl = "6"
log = "0.4.11"
luminance = "0.43.1"
luminance-front = "0.3.1"
luminance-glfw = "0.14.2"
luminance-windowing = "0.9.3"
rand = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.17"
wavefront_obj = "8"
