[package]
name = "entity"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "The entity system"
keywords = []
categories = []
readme = "README.md"
edition = "2018"

[dependencies]
colored = "2"
log = "0.4.11"
luminance = "0.42"
luminance-derive = "0.6.2"
system = "0.1"
wavefront_obj = "8"
