[package]
name = "runtime"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Demoscene runtime binary"
keywords = []
categories = []
homepage = "https://github.com/phaazon/runtime"
repository = "https://github.com/phaazon/runtime"
readme = "README.md"
edition = "2018"

[dependencies]
env_logger = "0.7.1"
entity = "0.1"
log = "0.4.11"
structopt = "0.3.17"
system = "0.1"
